--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <a class="dropdown-item" href="#">Setting</a>
-            <a class="dropdown-item" href="#">Add Channel</a>
+            <a class="dropdown-item" href="/create/channel">Create Channel</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout/">Logout</a>
           </div>
